# auto-cdc

./: CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  cdc.py.bak  deployment.md  pyproject.toml  test.py
src/auto_cdc/: __init__.py  cdc.py  exceptions.py  utils.py
tests/: __init__.py  conftest.py  test_cdc.py
