[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-cdc"
version = "0.1.4"
description = "Automated Change Data Capture framework built on Delta Lake"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Zak Keish", email = "zak.keish@gmail.com"},
]
keywords = [
    "change-data-capture",
    "cdc",
    "databricks",
    "delta-lake",
    "data-engineering",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
]
requires-python = ">=3.10"
dependencies = [
    "pyspark>=3.4.0"
    "deltalake>=1.5.0"
]